# se-toolkit-lab-7

./: README.md  docker-compose.yml
backend/: Dockerfile
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  help.py  intent_router.py
bot/handlers/commands/: __init__.py  health.py  labs.py  scores.py  start.py
bot/services/: __init__.py  llm_client.py  lms_client.py  tools.py
wiki/: dockerfile-uv-workspace-fix.md
